Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28740

[Crash] Confirmation of selecting cmake in kit configuration options causes the app to crash (EXC_BAD_ACCESS)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 10.0.0
    • Qt Creator 9.0.1
    • All Other Issues
    • None
    • MacOS 13.1 (22C65)
      Qt Creator 9.0.1
    • macOS
    • 3043f4bba (10.0)

      Steps:

      1. Click on Kit Configuration button.
      2. Click on 'Manage button next to Cmake tool dropdown.
      3. Select cmake from 'Auto-detected' list
      4. Click OK

       

      Expected: Settings saved, no crash.

      Actual: App is crashing. See attached video and crash report. 

      Reproducibility: 9/10

        For Gerrit Dashboard: QTCREATORBUG-28740
        # Subject Branch Project Status CR V

            con Eike Ziller
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes